@@ -96,6 +96,10 @@ format, respectively, which is more efficient for large matrices.
 These options are unnecessary in the when the sky
 input has a header.
 .PP
+Any of the matrix or vector files may be read from a command
+instead of a file by
+using quotes and a beginning exclamation point ('!').
+.PP
 The standard output of
 .I dctimestep
 is either a color vector with as many RGB triplets
