@@ -2026,3 +2026,6 @@ color rendering of Klems and tensor tree data.
 Fixed bug discovered by Jacob Jonsson in Klems BSDF
 interpolator that caused it to over-predict normal
 transmittance and reflectance.
+
+Added ability to read input from commands in dctimestep
+and rmtxop
